<resources>
    <string name="app_name">RecipeApp</string>
    <string name="welcome_textView">Hey, welcome back</string>
    <string name="create_recipe_btn_text">Create recipe</string>
    <string name="view_recipe_btn_text">View recipe</string>
    <string name="select_recipe_type_title">Select your type</string>
    <string name="next_btn_text">Next</string>
    <string name="create_recipe_title">Create recipe</string>
    <string name="recipe_name_text">Recipe name</string>
    <string name="select_recipe_type_textView">Recipe type</string>
    <string name="select_recipe_ingredients_textView">Recipe ingredients</string>
    <string name="recipe_ingredients_text">Recipe ingredients</string>
    <string name="recipe_step_text">Recipe step</string>
    <string name="fill_out_text">Let start to create a new recipe now!!!</string>
    <string name="loading_textView">Loading...</string>
    <string name="success">Success!!</string>
    <string name="failure_text">Something wrong</string>
    <string name="read_storage_permission_denied">Request read storage permission denied</string>
    <string name="image_selection_failed">Select image fail</string>
    <string name="no_recipe_text">No recipe</string>
    <string name="recipe_detail_title">Recipe detail</string>
    <string name="let_edit_text">Edit your recipe here!!</string>
    <string name="edit_recipe_title">Edit recipe</string>
    <string name="recipeDetail_ingredients_text">Recipe ingredients</string>
    <string name="recipeDetail_step_text">Recipe step</string>
    <string name="exit_without_save">What to exit without save?</string>
    <string name="confirm_delete_recipe">Confirm to delete this recipe?</string>
    <string name="title_dialog">Internet</string>
    <string name="title_dialogMessage">Connection error, check you internet connection and retry again.</string>
    <string name="edit_recipe">edit_recipe</string>
    <string name="backbutton">backButton</string>
    <string name="select_image">select_image</string>
    <string name="done_buttton_text">Done</string>
    <string name="delete_button">delete_button</string>
    <string name="recipe_image">Recipe_image</string>
    <string name="add_recipe">Add recipe</string>
    <string name="icon">Icon</string>
</resources>