<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".j.ui.MainActivity">

        <TextView
            android:id="@+id/hey_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_textView"
            android:layout_marginStart="@dimen/main_hey_text_marginStart"
            android:layout_marginTop="@dimen/main_hey_text_marginTop"
            android:textSize="@dimen/main_hey_textSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/recipe_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_spinner_height"
            android:layout_marginLeft="@dimen/main_spinner_margin_left_right"
            android:layout_marginRight="@dimen/main_spinner_margin_left_right"
            android:background="@drawable/spinner"
            android:layout_marginTop="@dimen/main_spinner_marginTop"
            android:elevation="@dimen/elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hey_textView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_recyclerView_margin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_type_spinner" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/floatingButton_margin"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/add_recipe" />

        <TextView
            android:id="@+id/no_recipe_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/no_recipe_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>